--- a/publiccode.yaml
+++ b/publiccode.yaml
@@ -35,13 +35,13 @@ nl:
 organisation:
   description: "E\xE9n centrale plek voor hergebruik van informatietechnologie binnen\
     \ de overheid"
-  logo: https://avatars.githubusercontent.com/u/106239067?v=4
+  logo: https://commonground.nl/file/embed/ca48ca97-b475-4318-bb7b-14cb552770c9/cg_small.png
   name: OpenCatalogi
   url: OpenCatalogi
 platforms:
 - web
 publiccodeYmlVersion: '0.2'
-releaseDate: '2023-10-28'
+releaseDate: '2023-12-11'
 roadmap: ''
 softwareType: standalone/web
 softwareVersion: ''
