--- a/.github/workflows/openCatalogi.yaml
+++ b/.github/workflows/openCatalogi.yaml
@@ -24,8 +24,8 @@ jobs:
           nl_design_theme_classname: 'commonground-theme'
           pull_from_branche: 'development'
           start_page: 'false'
-          footer_content: 'https://raw.githubusercontent.com/OpenCatalogi/opencatalogi.nl/main/FooterContent.json'
-          navbar_content: 'https://raw.githubusercontent.com/OpenCatalogi/opencatalogi.nl/main/HeaderContent.json'
+          footer_content: 'https://raw.githubusercontent.com/OpenCatalogi/commonground.nu/main/FooterContent.json'
+          navbar_content: 'https://raw.githubusercontent.com/OpenCatalogi/commonground.nu/main/HeaderContent.json'
           favicon_logo: 'https://dev.opencatalogi.nl/static/logo_OpenCatalogi-8b1b0a001c3f37dae4d3f69b5964ec72.png'
           navbar_logo: 'https://dev.opencatalogi.nl/static/logo_OpenCatalogi-8b1b0a001c3f37dae4d3f69b5964ec72.png'
           footer_logo: 'https://dev.opencatalogi.nl/static/logo_OpenCatalogi-8b1b0a001c3f37dae4d3f69b5964ec72.png'
