--- a/.github/workflows/openCatalogi.yaml
+++ b/.github/workflows/openCatalogi.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           opencatalogi: true
       - name: Create an Open Catalogi page
-        uses: OpenCatalogi/opencatalogi-action@1.1.8
+        uses: OpenCatalogi/opencatalogi-action@1.1.9
         with:
           github_repository_name_as_prefix: false
           nl_design_theme_classname: 'commonground-theme'
@@ -32,3 +32,4 @@ jobs:
           jumbotron_description: "Alle commonground portfolio items die zijn gepubliceerd op Open Catalogi"
           jumbotron_searchform: "true"
           github_organization_url: "false"
+          filter_rating: "Commonground"
